// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datalabRepository getAll returns expected snapshot 1`] = `
Array [
  Object {
    "name": "testlab",
  },
  Object {
    "name": "datalab",
  },
]
`;

exports[`datalabRepository getByName returns expected snapshot 1`] = `
Object {
  "name": "testlab",
}
`;
